--- a/index.html
+++ b/index.html
@@ -1,11 +1,314 @@
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Solar System</title>
-</head>
-<body>
-    <h1 style="margin: auto auto;">Solar System</h1>
-</body>
+    <link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous">
+    <link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="stylemain.css">
+    <link href="https://fonts.googleapis.com/css?family=Prompt&display=swap"
+      rel="stylesheet">
+    <title>Project</title>
+
+    <style>
+    nav {
+      height: 0px;
+      font-size: 18px;
+    }
+    .carousel{
+      background: no-repeat center center scroll;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+    }
+  </style>
+  </head>
+
+  <body background="bg.jpg">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark w-100
+      navbar-fixed-top">
+      <a class="navbar-brand" href="#">Logo</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav pull-right">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">ระบบสุริยะ<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">ดาวเคราะห์</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">ดาวเคราะห์แคระ</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle pull-left" href="#"
+              id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              วัตถุอื่นๆ
+            </a>
+            <div class="dropdown-menu dropdown-menu-right"
+              aria-labelledby="navbarDropdownMenuLink">
+              <ol class="dropdown pull-left">
+                <li class="dropdown-item"><a class="dropdown-item" href="#">ทฟ</a></li>
+                <li class="dropdown-item"><a class="dropdown-item" href="#">NASA Image and Video
+                    Library</a></li>
+                <li class="dropdown-item"><a class="dropdown-item" href="#">ผู้จัดทำ</a></li>
+                </ol>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle pull-left" href="#"
+              id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              MORE
+            </a>
+            <div class="dropdown-menu dropdown-menu-right"
+              aria-labelledby="navbarDropdownMenuLink">
+              <ol class="dropdown pull-left">
+                <li class="dropdown-item"><a class="dropdown-item" href="#">แหล่งเรียนรู้เพิ่มเติม</a></li>
+                <li class="dropdown-item"><a class="dropdown-item" href="#">NASA Image and Video
+                    Library</a></li>
+                <li class="dropdown-item"><a class="dropdown-item" href="#">ผู้จัดทำ</a></li>
+                </ol>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--สไลด์ รูปอัตโนมัติ-->
+    <br><br>
+    <div id="carousel" class="carousel slide" data-ride="carousel"
+data-interval="2000"
+>
+      <ol class="carousel-indicators">
+        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel" data-slide-to="1"></li>
+        <li data-target="#carousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="/image/w00-1_solar_system.jpg" id="img-slide"
+            class="image-cover" alt="solar" />
+          <div class="carousel-caption">
+            <h3>SOLAR SYSTEMS</h3>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/image/structure_of_the sun.png" id="img-slide"
+            class="image-cover" alt="solar" />
+          <div class="carousel-caption">
+            <h3>Webtech</h3>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/image/w02_solar_system.jpg" id="img-slide"
+            class="image-cover" alt="solar" />
+          <div class="carousel-caption">
+            <h3>Group 39</h3>
+            <p></p>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#carousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <h2 style="text-align: center; color: white;">Solar Systems</h2>
+    <br>
+    <!-------พระอาทิตย์----------->
+    <div class="container-fluid">
+      <div class="col-xs col-sm col-md col-lg">
+        <a class="center-block" href="content/sun.html">
+          <img class="image-Sun mr-3 mx-auto" src="image/0sun.png" alt="Sun"
+            style="width: 60%;">
+          <div class="text-danger border border-warning bg-white w-25 mx-auto">
+          <h1 style="color: red;">พระอาทิตย์</h1>
+          <p style="color: red;">Sun</p>
+        </div>
+        </a>
+      </div>
+    </div>
+    <br>
+    <!---------ดาวเคราะห์ ทั้ง 8 ดวง----------->
+    <div class="container-fluid">
+      <div class="border border-danger mx-auto w-25 rounded">
+      <h1><strong>
+          <center>ดาวเคราะห์</center>
+        </strong></h1>
+      <p>Planet</p>
+      </div>
+      <!--------ดาวเคราะห์ แถว 1 ดาว 4 ดวง พุธ ศุกร์ โลก อังคาร------>
+      <div class="row bottom-layout">
+        <div class="col-xs col-sm-3 col-md-3 col-lg-3">
+          <a class="center-block" href="#" data-toggle="tooltip" title="
+          มวล:0.055 เท่าของโลก
+          คาบการหมุนรอบตัวเอง:58.65 วันของโลก
+          เส้นผ่านศูนย์กลาง: 2,440 กิโลเมตร
+          ความหนาแน่น:5.43 กรัมต่อลูกบาศก์เซนติเมตร" >
+            <img class="image-Mercury mr-3" id="image-planet"
+              src="image/1mercury.png" alt="Mercury" />
+          <p>ดาวพุธ</p>
+            <p>Mercury</p>
+          </a>
+        </div>
+        <div class="col-xs col-sm-3 col-md-3 col-lg-3">
+          <a class="center-block" href="#" data-toggle="tooltip" title="">
+
+            <img class="image-Venus mr-3" id="image-planet"
+              src="image/2venus.png" alt="Venus" />
+            <p>ดาวศุกร์</p>
+            <p>Venus</p>
+          </a>
+        </div>
+        <div class="col-xs col-sm-3 col-md-3 col-lg-3">
+          <a class="center-block" href="#">
+            <img class="image-Earth mr-3" id="image-planet"
+              src="image/3earth.png" alt="Earth" />
+            <p>โลก</p>
+            <p>Earth</p>
+          </a>
+        </div>
+        <div class="col-xs col-sm-3 col-md-3 col-lg-3">
+          <a class="content-box" href="#">
+            <img class="image-Mars mr-3" id="image-planet" src="image/4mars.png"
+              alt="Mars" />
+            <p>ดาวอังคาร</p>
+            <p>Mars</p>
+          </a>
+        </div>
+      </div>
+      <!----------ดาวเคราะห์ แถวที่ 2 มีดาวพฤหัส เสาร์ ยูเรนัส และเนปจูน----------->
+      <div class="row">
+        <div class="col-xs col-sm-3 col-md-3 col-lg-3">
+          <a class="content-box" href="#">
+            <img class="image-Jupiter mr-3" id="image-planet"
+              src="image/6jupiter.png" alt="Jupiter" />
+            <p>ดาวพฤหัสบดี</p>
+            <p>Jupiter</p>
+          </a>
+        </div>
+        <div class="col-xs col-sm-3 col-md-3 col-lg-3">
+          <a class="box" href="#">
+            <img class="image-Saturn mr-3" id="image-planet"
+              src="image/7saturn.png" alt="Saturn" />
+            <p>ดาวเสาร์</p>
+            <p>Saturn</p>
+          </a>
+        </div>
+        <div class="col-xs col-sm-3 col-md-3 col-lg-3">
+          <a class="box" href="#">
+            <img class="image-uranus mr-3" id="image-planet"
+              src="image/8uranus.png" alt="Uranus" />
+            <p>ดาวยูเรนัส</p>
+            <p>Uranus</p>
+          </a>
+        </div>
+        <div class="col-xs col-sm-3 col-md-3 col-lg-3">
+          <a class="box" href="#">
+            <img class="image-Jupiter mr-3" id="image-planet"
+              src="image/9neptune.png" alt="Neptune" />
+            <p>ดาวเนปจูน</p>
+            <p>Neptune</p>
+          </a>
+        </div>
+      </div>
+    </div>
+    <br>
+    <!----ดาวเคราะห์แคระ 5 ดวง------->
+    <div class="container-fluid">
+      <div class="border border-danger rounded w-25
+         mx-auto"><h1>ดาวเคราะห์แคระ</h1>
+        <p>Dwarf Planet</p>
+      </div>
+      <br>
+      <!---ดาวเคราะห์แคระ แถว 1 มีพลูโต ซีรีส เฮาเมอา--->
+      <div class="row">
+        <div class="col-xs col-sm-4 col-md-4 col-lg-4">
+          <a class="box" href="#">
+            <img class="image-pluto mr-3" src="image/10pluto.png" alt="Pluto"
+              style="width: 70%;">
+            <p>พลูโต</p>
+            <p>Pluto</p>
+          </a>
+        </div>
+        <div class="col-xs col-sm-4 col-md-4 col-lg-4">
+          <a class="box" href="#">
+            <img class="image-ceres mr-3" src="image/11ceres.png" alt="ceres"
+              style="width: 70%;">
+            <p>ซีรีส</p>
+            <p>Ceres</p>
+          </a>
+        </div>
+        <div class="col-xs col-sm-4 col-md-4 col-lg-4">
+          <a class="box" href="#">
+            <img class="image-haumea mr-3" src="image/12haumea.png" alt="haumea"
+              style="width: 70%;">
+            <p>เฮาเมอา</p>
+            <p>Haumea</p>
+          </a>
+        </div>
+      </div>
+      <!----ดาวเคราะห์แคระ แถว 2  มีเอริส มาคีมาคี----->
+      <div class="row2 m-0">
+        <div class="row">
+          <div class="col-xs col-sm-6 col-md-6 col-lg-6">
+            <a class="box" href="#">
+              <img class="image-eris mr-3" src="image/13eris.png" alt="eris"
+                style="width: 50%;">
+              <p>เอริส</p>
+              <p>Eris</p>
+            </a>
+          </div>
+          <div class="col-xs col-sm-6 col-md-6 col-lg-6">
+            <a class="box" href="#">
+              <img class="image-makemake mr-3" src="image/14makemake.png"
+                alt="eris" style="width: 50%;">
+              <p>มาคี มาคี</p>
+              <p>Makemake</p>
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!--ส่วนของด้านล่าง-->
+    <div id="footer" class="card-footer text-muted fixed">
+      <p id="p-footer">ระบบสุริยะ</p>
+    </div>
+    <script
+     src="/content/nav.js">
+  </script>
+  </body>
+
 </html>
