--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ data-interval="2000"
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img src="/image/w00-1_solar_system.jpg" id="img-slide"
+          <img src="image/w00-1_solar_system.jpg" id="img-slide"
             class="image-cover" alt="solar" />
           <div class="carousel-caption">
             <h3>SOLAR SYSTEMS</h3>
@@ -113,7 +113,7 @@ data-interval="2000"
         </div>
 
         <div class="item">
-          <img src="/image/structure_of_the sun.png" id="img-slide"
+          <img src="image/structure_of_the sun.png" id="img-slide"
             class="image-cover" alt="solar" />
           <div class="carousel-caption">
             <h3>Webtech</h3>
@@ -122,7 +122,7 @@ data-interval="2000"
         </div>
 
         <div class="item">
-          <img src="/image/w02_solar_system.jpg" id="img-slide"
+          <img src="image/w02_solar_system.jpg" id="img-slide"
             class="image-cover" alt="solar" />
           <div class="carousel-caption">
             <h3>Group 39</h3>
