--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark w-100 fixed-top">
         <a class="navbar-brand" href="../index.html">
-            <img src="/img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="../img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Solar System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,11 +31,11 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="../index.html#origin">กำเนิดระบบสุริยะ</a>
-                        <a class="dropdown-item" href="/content/sun.html">ดวงอาทิตย์</a>
-                        <a class="dropdown-item" href="/content/KuiperBelt.html">แถบไคเปอร์</a>
-                        <a class="dropdown-item" href="/content/scattereddisc.html">แถบจานกระจาย</a>
-                        <a class="dropdown-item" href="/content/Heliosphere.html">ขอบเขตเฮลิโอพอส</a>
-                        <a class="dropdown-item" href="/content/OortCloud.html">ย่านของเมฆออร์ต</a>
+                        <a class="dropdown-item" href="../content/sun.html">ดวงอาทิตย์</a>
+                        <a class="dropdown-item" href="../content/KuiperBelt.html">แถบไคเปอร์</a>
+                        <a class="dropdown-item" href="../content/scattereddisc.html">แถบจานกระจาย</a>
+                        <a class="dropdown-item" href="../content/Heliosphere.html">ขอบเขตเฮลิโอพอส</a>
+                        <a class="dropdown-item" href="../content/OortCloud.html">ย่านของเมฆออร์ต</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
