--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark w-100 fixed-top">
-        <a class="navbar-brand" href="../index.html">
-            <img src="../img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" href="index.html">
+            <img src="img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Solar System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,12 +30,12 @@
                         ระบบสุริยะ
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="../index.html#origin">กำเนิดระบบสุริยะ</a>
-                        <a class="dropdown-item" href="../content/sun.html">ดวงอาทิตย์</a>
-                        <a class="dropdown-item" href="../content/KuiperBelt.html">แถบไคเปอร์</a>
-                        <a class="dropdown-item" href="../content/scattereddisc.html">แถบจานกระจาย</a>
-                        <a class="dropdown-item" href="../content/Heliosphere.html">ขอบเขตเฮลิโอพอส</a>
-                        <a class="dropdown-item" href="../content/OortCloud.html">ย่านของเมฆออร์ต</a>
+                        <a class="dropdown-item" href="index.html#origin">กำเนิดระบบสุริยะ</a>
+                        <a class="dropdown-item" href="content/sun.html">ดวงอาทิตย์</a>
+                        <a class="dropdown-item" href="content/KuiperBelt.html">แถบไคเปอร์</a>
+                        <a class="dropdown-item" href="content/scattereddisc.html">แถบจานกระจาย</a>
+                        <a class="dropdown-item" href="content/Heliosphere.html">ขอบเขตเฮลิโอพอส</a>
+                        <a class="dropdown-item" href="content/OortCloud.html">ย่านของเมฆออร์ต</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -44,24 +44,24 @@
                         ดาวเคราะห์
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/content/definition.html">นิยามดาวเคราะห์</a>
+                        <a class="dropdown-item" href="content/definition.html">นิยามดาวเคราะห์</a>
                         <div class="dropdown-divider"></div>
                         <h4 class="dropdown-header"><i id="dropdownhead">ดาวเคราะห์</i></h4>
-                        <a class="dropdown-item" href="/content/mercury.html">พุธ</a>
-                        <a class="dropdown-item" href="/content/venus.html">ศุกร์</a>
-                        <a class="dropdown-item" href="/content/earth.html">โลก</a>
-                        <a class="dropdown-item" href="/content/mars.html">อังคาร</a>
-                        <a class="dropdown-item" href="/content/jupiter.html">พฤหัสบดี</a>
-                        <a class="dropdown-item" href="/content/Saturn.html">เสาร์</a>
-                        <a class="dropdown-item" href="/content/uranus.html">ยูเรนัส</a>
-                        <a class="dropdown-item" href="/content/neptune.html">เนปจูน</a>
+                        <a class="dropdown-item" href="content/mercury.html">พุธ</a>
+                        <a class="dropdown-item" href="content/venus.html">ศุกร์</a>
+                        <a class="dropdown-item" href="content/earth.html">โลก</a>
+                        <a class="dropdown-item" href="content/mars.html">อังคาร</a>
+                        <a class="dropdown-item" href="content/jupiter.html">พฤหัสบดี</a>
+                        <a class="dropdown-item" href="content/Saturn.html">เสาร์</a>
+                        <a class="dropdown-item" href="content/uranus.html">ยูเรนัส</a>
+                        <a class="dropdown-item" href="content/neptune.html">เนปจูน</a>
                         <div class="dropdown-divider"></div>
                         <h4 class="dropdown-header"><i id="dropdownhead">ดาวเคราะห์แคระ</i></h4>
-                        <a class="dropdown-item" href="/content/ceres.html">เซเรส</a>
-                        <a class="dropdown-item" href="/content/pluto.html">พลูโต</a>
-                        <a class="dropdown-item" href="/content/haumea.html">เฮาเมอา</a>
-                        <a class="dropdown-item" href="/content/makemake.html">มาคีมาคี</a>
-                        <a class="dropdown-item" href="/content/eris.html">อิรีส</a>
+                        <a class="dropdown-item" href="content/ceres.html">เซเรส</a>
+                        <a class="dropdown-item" href="content/pluto.html">พลูโต</a>
+                        <a class="dropdown-item" href="content/haumea.html">เฮาเมอา</a>
+                        <a class="dropdown-item" href="content/makemake.html">มาคีมาคี</a>
+                        <a class="dropdown-item" href="content/eris.html">อิรีส</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -70,8 +70,8 @@
                         วัตถุอื่นๆ
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/content/Asteroid.html">ดาวเคราะห์น้อย</a>
-                        <a class="dropdown-item" href="/content/comet.html">ดาวหาง</a>
+                        <a class="dropdown-item" href="content/Asteroid.html">ดาวเคราะห์น้อย</a>
+                        <a class="dropdown-item" href="content/comet.html">ดาวหาง</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown ">
@@ -87,7 +87,7 @@
                             <li><a class="dropdown-item" href="https://images.nasa.gov/" target="_blank">NASA Image and
                                     Video
                                     Library</a></li>
-                            <li><a class="dropdown-item" href="/about/about.html">ผู้จัดทำ</a></li>
+                            <li><a class="dropdown-item" href="about/about.html">ผู้จัดทำ</a></li>
                         </ul>
                     </div>
                 </li>
@@ -109,21 +109,21 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/img/main/w02_solar_system.jpg" alt="Solar System">
+                <img src="img/main/w02_solar_system.jpg" alt="Solar System">
                 <!--id="img-slide" class="image-cover"-->
                 <div class="carousel-caption">
                     <p id="carouseltext">Solar System</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/4earth/atmosphere of earth.jpg" alt="Solar System">
+                <img src="img/4earth/atmosphere of earth.jpg" alt="Solar System">
                 <!--id="img-slide" class="image-cover"-->
                 <div class="carousel-caption">
                     <p id="carouseltext">ชั้นบรรยาการของโลก</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/8saturn/Panoramic Rings of Saturn.jpg" alt="Solar System">
+                <img src="img/8saturn/Panoramic Rings of Saturn.jpg" alt="Solar System">
                 <!--id="img-slide" class="image-cover"-->
                 <div class="carousel-caption">
                     <p id="carouseltext">วงแหวนของดาวเสาร์</p>
@@ -181,8 +181,8 @@
         <hr class="hrhead">
         <br>
         <div class="col-xs col-sm col-md col-lg">
-            <a href="/content/sun.html" target="_blank">
-                <img class="image-Sun mr-3 mx-auto" src="/img/1sun/0sun.png" alt="ดวงอาทิตย์" style="height: 70%;">
+            <a href="content/sun.html" target="_blank">
+                <img class="image-Sun mr-3 mx-auto" src="img/1sun/0sun.png" alt="ดวงอาทิตย์" style="height: 70%;">
             </a>
         </div>
 
@@ -199,26 +199,26 @@
         <!-- ดาวเคราะห์ แถว 1 ดาว 4 ดวง พุธ ศุกร์ โลก อังคาร -->
         <div class="row bottom-layout">
             <div class="col-xs col-sm-3 col-md-3 col-lg-3">
-                <a href="/content/mercury.html" data-toggle="tooltip" target="_blank">
-                    <img src="/img/2mercury/1mercury.png" alt="Mercury" class="image-Mercury mr-3" id="image-planet">
+                <a href="content/mercury.html" data-toggle="tooltip" target="_blank">
+                    <img src="img/2mercury/1mercury.png" alt="Mercury" class="image-Mercury mr-3" id="image-planet">
                     <p>ดาวพุธ <br>(Mercury)</p>
                 </a>
             </div>
             <div class="col-xs col-sm-3 col-md-3 col-lg-3">
-                <a href="/content/venus.html" data-toggle="tooltip" target="_blank">
-                    <img src="/img/3venus/2venus.png" alt="Venus" class="image-Venus mr-3" id="image-planet">
+                <a href="content/venus.html" data-toggle="tooltip" target="_blank">
+                    <img src="img/3venus/2venus.png" alt="Venus" class="image-Venus mr-3" id="image-planet">
                     <p>ดาวศุกร์ <br>(Venus)</p>
                 </a>
             </div>
             <div class="col-xs col-sm-3 col-md-3 col-lg-3">
-                <a href="/content/earth.html" target="_blank">
-                    <img src="/img/4earth/3earth.png" alt="Earth" class="image-Earth mr-3" id="image-planet">
+                <a href="content/earth.html" target="_blank">
+                    <img src="img/4earth/3earth.png" alt="Earth" class="image-Earth mr-3" id="image-planet">
                     <p>โลก<br>(Earth)</p>
                 </a>
             </div>
             <div class="col-xs col-sm-3 col-md-3 col-lg-3">
-                <a href="/content/mars.html" target="_blank">
-                    <img src="/img/5mars/4mars.png" alt="Mars" class="image-Mars mr-3" id="image-planet">
+                <a href="content/mars.html" target="_blank">
+                    <img src="img/5mars/4mars.png" alt="Mars" class="image-Mars mr-3" id="image-planet">
                     <p>ดาวอังคาร<br>(Mars)</p>
                 </a>
             </div>
@@ -227,26 +227,26 @@
         <!-- ดาวเคราะห์ แถวที่ 2 มีดาวพฤหัส เสาร์ ยูเรนัส และเนปจูน -->
         <div class="row">
             <div class="col-xs col-sm-3 col-md-3 col-lg-3">
-                <a class="content-box" href="/content/jupiter.html" target="_blank">
-                    <img src="/img/7jupiter/6jupiter.png" alt="Jupiter" class="image-Jupiter mr-3" id="image-planet">
+                <a class="content-box" href="content/jupiter.html" target="_blank">
+                    <img src="img/7jupiter/6jupiter.png" alt="Jupiter" class="image-Jupiter mr-3" id="image-planet">
                     <p>ดาวพฤหัสบดี<br>(Jupiter)</p>
                 </a>
             </div>
             <div class="col-xs col-sm-3 col-md-3 col-lg-3">
-                <a class="box" href="/content/saturn.html" target="_blank">
-                    <img src="/img/8saturn/7saturn.png" alt="Saturn" class="image-Saturn mr-3" id="image-planet">
+                <a class="box" href="content/saturn.html" target="_blank">
+                    <img src="img/8saturn/7saturn.png" alt="Saturn" class="image-Saturn mr-3" id="image-planet">
                     <p>ดาวเสาร์<br>(Saturn)</p>
                 </a>
             </div>
             <div class="col-xs col-sm-3 col-md-3 col-lg-3">
-                <a class="box" href="/content/uranus.html" target="_blank">
-                    <img src="/img/9uranus/8uranus.png" alt="Uranus" class="image-uranus mr-3" id="image-planet">
+                <a class="box" href="content/uranus.html" target="_blank">
+                    <img src="img/9uranus/8uranus.png" alt="Uranus" class="image-uranus mr-3" id="image-planet">
                     <p>ดาวยูเรนัส<br>(Uranus)</p>
                 </a>
             </div>
             <div class="col-xs col-sm-3 col-md-3 col-lg-3">
-                <a class="box" href="/content/neptune.html" target="_blank">
-                    <img src="/img/10neptune/9neptune.png" alt="Neptune" class="image-Jupiter mr-3" id="image-planet">
+                <a class="box" href="content/neptune.html" target="_blank">
+                    <img src="img/10neptune/9neptune.png" alt="Neptune" class="image-Jupiter mr-3" id="image-planet">
                     <p>ดาวเนปจูน<br>(Neptune)</p>
                 </a>
             </div>
@@ -265,20 +265,20 @@
         <!---ดาวเคราะห์แคระ แถว 1 : พลูโต ซีรีส เฮาเมอา--->
         <div class="row">
             <div class="col-xs col-sm-4 col-md-4 col-lg-4">
-                <a class="box" href="/content/pluto.html" target="_blank">
-                    <img src="/img/11dwarf/10pluto.png" alt="Pluto" class="image-pluto mr-3" style="width: 50%;">
+                <a class="box" href="content/pluto.html" target="_blank">
+                    <img src="img/11dwarf/10pluto.png" alt="Pluto" class="image-pluto mr-3" style="width: 50%;">
                     <p>พลูโต<br>(Pluto)</p>
                 </a>
             </div>
             <div class="col-xs col-sm-4 col-md-4 col-lg-4">
-                <a class="box" href="/content/ceres.html" target="_blank">
-                    <img src="/img/11dwarf/11ceres.png" alt="Ceres" class="image-ceres mr-3" style="width: 50%;">
+                <a class="box" href="content/ceres.html" target="_blank">
+                    <img src="img/11dwarf/11ceres.png" alt="Ceres" class="image-ceres mr-3" style="width: 50%;">
                     <p>ซีรีส<br>(Ceres)</p>
                 </a>
             </div>
             <div class="col-xs col-sm-4 col-md-4 col-lg-4">
-                <a class="box" href="/content/haumea.html" target="_blank">
-                    <img src="/img/11dwarf/12haumea.png" alt="Haumea" class="image-haumea mr-3" style="width: 50%;">
+                <a class="box" href="content/haumea.html" target="_blank">
+                    <img src="img/11dwarf/12haumea.png" alt="Haumea" class="image-haumea mr-3" style="width: 50%;">
                     <p>เฮาเมอา<br>(Haumea)</p>
                 </a>
             </div>
@@ -287,14 +287,14 @@
         <div class="row2 m-0">
             <div class="row">
                 <div class="col-xs col-sm-6 col-md-6 col-lg-6">
-                    <a class="box" href="/content/eris.html" target="_blank">
-                        <img src="/img/11dwarf/13eris.png" alt="eris" class="image-eris mr-3" style="width: 30%;">
+                    <a class="box" href="content/eris.html" target="_blank">
+                        <img src="img/11dwarf/13eris.png" alt="eris" class="image-eris mr-3" style="width: 30%;">
                         <p>เอริส<br>(Eris)</p>
                     </a>
                 </div>
                 <div class="col-xs col-sm-6 col-md-6 col-lg-6">
-                    <a class="box" href="/content/makemake.html" target="_blank">
-                        <img src="/img/11dwarf/14makemake.png" alt="makemake" class="image-makemake mr-3"
+                    <a class="box" href="content/makemake.html" target="_blank">
+                        <img src="img/11dwarf/14makemake.png" alt="makemake" class="image-makemake mr-3"
                             style="width: 30%;">
                         <p>มาคีมาคี<br>(Makemake)</p>
                     </a>
@@ -303,8 +303,8 @@
         </div>
     </div>
     <div class="footer navbar-dark bg-dark">
-        <a class="navbar-brand" href="../index.html">
-            <img src="/img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" href="index.html">
+            <img src="img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Solar System
         </a>
     </div>
