--- a/about/about.html
+++ b/about/about.html
@@ -165,7 +165,7 @@
     </div>
     <div class="footer navbar-dark bg-dark">
         <a class="navbar-brand" href="../index.html">
-            <img src="/img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="../img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Solar System
         </a>
     </div>
