--- a/content/Asteroid.html
+++ b/content/Asteroid.html
@@ -30,12 +30,12 @@
                         ระบบสุริยะ
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="index.html#origin">กำเนิดระบบสุริยะ</a>
-                        <a class="dropdown-item" href="sun.html">ดวงอาทิตย์</a>
-                        <a class="dropdown-item" href="KuiperBelt.html">แถบไคเปอร์</a>
-                        <a class="dropdown-item" href="scattereddisc.html">แถบจานกระจาย</a>
-                        <a class="dropdown-item" href="Heliosphere.html">ขอบเขตเฮลิโอพอส</a>
-                        <a class="dropdown-item" href="OortCloud.html">ย่านของเมฆออร์ต</a>
+                        <a class="dropdown-item" href="../index.html#origin">กำเนิดระบบสุริยะ</a>
+                        <a class="dropdown-item" href="../content/sun.html">ดวงอาทิตย์</a>
+                        <a class="dropdown-item" href="../content/KuiperBelt.html">แถบไคเปอร์</a>
+                        <a class="dropdown-item" href="../content/scattereddisc.html">แถบจานกระจาย</a>
+                        <a class="dropdown-item" href="../content/Heliosphere.html">ขอบเขตเฮลิโอพอส</a>
+                        <a class="dropdown-item" href="../content/OortCloud.html">ย่านของเมฆออร์ต</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -44,24 +44,24 @@
                         ดาวเคราะห์
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="definition.html">นิยามดาวเคราะห์</a>
+                        <a class="dropdown-item" href="../content/definition.html">นิยามดาวเคราะห์</a>
                         <div class="dropdown-divider"></div>
                         <h4 class="dropdown-header"><i id="drophead">ดาวเคราะห์</i></h4>
-                        <a class="dropdown-item" href="mercury.html">พุธ</a>
-                        <a class="dropdown-item" href="venus.html">ศุกร์</a>
-                        <a class="dropdown-item" href="earth.html">โลก</a>
-                        <a class="dropdown-item" href="mars.html">อังคาร</a>
-                        <a class="dropdown-item" href="jupiter.html">พฤหัสบดี</a>
-                        <a class="dropdown-item" href="Saturn.html">เสาร์</a>
-                        <a class="dropdown-item" href="uranus.html">ยูเรนัส</a>
-                        <a class="dropdown-item" href="neptune.html">เนปจูน</a>
+                        <a class="dropdown-item" href="../content/mercury.html">พุธ</a>
+                        <a class="dropdown-item" href="../content/venus.html">ศุกร์</a>
+                        <a class="dropdown-item" href="../content/earth.html">โลก</a>
+                        <a class="dropdown-item" href="../content/mars.html">อังคาร</a>
+                        <a class="dropdown-item" href="../content/jupiter.html">พฤหัสบดี</a>
+                        <a class="dropdown-item" href="../content/Saturn.html">เสาร์</a>
+                        <a class="dropdown-item" href="../content/uranus.html">ยูเรนัส</a>
+                        <a class="dropdown-item" href="../content/neptune.html">เนปจูน</a>
                         <div class="dropdown-divider"></div>
                         <h4 class="dropdown-header"><i id="drophead">ดาวเคราะห์แคระ</i></h4>
-                        <a class="dropdown-item" href="ceres.html">เซเรส</a>
-                        <a class="dropdown-item" href="pluto.html">พลูโต</a>
-                        <a class="dropdown-item" href="haumea.html">เฮาเมอา</a>
-                        <a class="dropdown-item" href="makemake.html">มาคีมาคี</a>
-                        <a class="dropdown-item" href="eris.html">อิรีส</a>
+                        <a class="dropdown-item" href="../content/ceres.html">เซเรส</a>
+                        <a class="dropdown-item" href="../content/pluto.html">พลูโต</a>
+                        <a class="dropdown-item" href="../content/haumea.html">เฮาเมอา</a>
+                        <a class="dropdown-item" href="../content/makemake.html">มาคีมาคี</a>
+                        <a class="dropdown-item" href="../content/eris.html">อิรีส</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown active">
@@ -70,8 +70,8 @@
                         วัตถุอื่นๆ
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="Asteroid.html">ดาวเคราะห์น้อย</a>
-                        <a class="dropdown-item" href="comet.html">ดาวหาง</a>
+                        <a class="dropdown-item" href="../content/Asteroid.html">ดาวเคราะห์น้อย</a>
+                        <a class="dropdown-item" href="../content/comet.html">ดาวหาง</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
