--- a/content/Asteroid.html
+++ b/content/Asteroid.html
@@ -87,7 +87,7 @@
                             <li><a class="dropdown-item" href="https://images.nasa.gov/" target="_blank">NASA Image and
                                     Video
                                     Library</a></li>
-                            <li><a class="dropdown-item" href="about.html">ผู้จัดทำ</a></li>
+                            <li><a class="dropdown-item" href="../about/about.html">ผู้จัดทำ</a></li>
                         </ul>
                     </div>
                 </li>
