--- a/content/comet.html
+++ b/content/comet.html
@@ -105,7 +105,7 @@
 
         <div class="container">
             <div class="pic01">
-                <img src="../img/13comet/comet ison.jpg ison.jpg" alt="Comet" class="pic01">
+                <img src="../img/13comet/comet ison.jpg" alt="Comet" class="pic01">
             </div><br>
             <p id="content01"></p><br>
 
