--- a/content/mars.html
+++ b/content/mars.html
@@ -15,8 +15,8 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark w-100 fixed-top">
-        <a class="navbar-brand" href="index.html">
-            <img src="icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" href="../index.html">
+            <img src="../img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Solar System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                         ระบบสุริยะ
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="index.html#origin">กำเนิดระบบสุริยะ</a>
+                        <a class="dropdown-item" href="../index.html#origin">กำเนิดระบบสุริยะ</a>
                         <a class="dropdown-item" href="sun.html">ดวงอาทิตย์</a>
                         <a class="dropdown-item" href="KuiperBelt.html">แถบไคเปอร์</a>
                         <a class="dropdown-item" href="scattereddisc.html">แถบจานกระจาย</a>
@@ -88,7 +88,7 @@
                             <li><a class="dropdown-item" href="https://images.nasa.gov/" target="_blank">NASA Image and
                                     Video
                                     Library</a></li>
-                            <li><a class="dropdown-item" href="about.html">ผู้จัดทำ</a></li>
+                            <li><a class="dropdown-item" href="../about/about.html">ผู้จัดทำ</a></li>
                         </ul>
                     </div>
                 </li>
@@ -105,7 +105,7 @@
 
         <div class="container">
             <div class="pic01">
-                <img src="4mars.png" alt="Mars" class="pic01">
+                <img src="../img/5mars/4mars.png" alt="Mars" class="pic01">
             </div><br>
             <p id="content01"></p><br>
             <table class="table table-striped table-light" id="table" style="text-align: center;">
@@ -167,24 +167,24 @@
             </table><br>
 
             <h4>บรรยากาศของดาวอังคาร</h4>
-            <img src="frost on Mars.jpg" alt="Mars Surface"><br>
+            <img src="../img/5mars/frost on Mars.jpg" alt="Mars Surface"><br>
             <p id="Atmosphere"></p><br>
 
             <h4>บริวารของอังคาร</h4>
             <div class="row">
-                <img src="phobos1.jpg" alt="phobos" style="border-radius: 50%;">
-                <img src="deimos1.jpg" alt="deimos" style="border-radius: 50%;">
+                <img src="../img/5mars/phobos1.jpg" alt="phobos" style="border-radius: 50%;">
+                <img src="../img/5mars/deimos1.jpg" alt="deimos" style="border-radius: 50%;">
             </div><br>
             <p id="satellite"></p>
 
             <h4>ฤดูกาลบนดาวอังคาร</h4>
-            <img src="Mars Surface.jpg" alt="Mars Surface" width="80%"><br>
+            <img src="../img/5mars/Mars Surface.jpg" alt="Mars Surface" width="80%"><br>
             <p id="season"></p>
         </div>
 
         <div class="footer navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">
-                <img src="icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
                 Solar System
             </a>
         </div>
