:pushpin: Changing Path

--- a/content/sun.html
+++ b/content/sun.html
@@ -15,8 +15,8 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark w-100 fixed-top">
-        <a class="navbar-brand" href="index.html">
-            <img src="icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" href="../index.html">
+            <img src="../img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Solar System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                         ระบบสุริยะ
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="index.html#origin">กำเนิดระบบสุริยะ</a>
+                        <a class="dropdown-item" href="../index.html#origin">กำเนิดระบบสุริยะ</a>
                         <a class="dropdown-item" href="sun.html">ดวงอาทิตย์</a>
                         <a class="dropdown-item" href="KuiperBelt.html">แถบไคเปอร์</a>
                         <a class="dropdown-item" href="scattereddisc.html">แถบจานกระจาย</a>
@@ -87,7 +87,7 @@
                             <li><a class="dropdown-item" href="https://images.nasa.gov/" target="_blank">NASA Image and
                                     Video
                                     Library</a></li>
-                            <li><a class="dropdown-item" href="about.html">ผู้จัดทำ</a></li>
+                            <li><a class="dropdown-item" href="../about/about.html">ผู้จัดทำ</a></li>
                         </ul>
                     </div>
                 </li>
@@ -104,7 +104,7 @@
 
         <div class="container">
             <div class="pic01">
-                <img src="0sun.png" alt="The Sun" class="pic01 ">
+                <img src="../img/1sun/0sun.png" alt="The Sun" class="pic01 ">
             </div>
             <p id="content01"></p><br>
             <table class="table table-striped table-light" id="table" style="text-align: center;">
@@ -149,34 +149,34 @@
                 </tr>
             </table><br>
             <h4>โครงสร้างของดวงอาทิตย์</h4>
-            <img src="structure_of_the sun.png" alt="structure of the sun"><br>
+            <img src="../img/1sun/structure_of_the sun.png" alt="structure of the sun"><br>
             <p id="structure"></p><br>
             <h4>บรรยากาศของดวงอาทิตย์</h4>
-            <img src="atmosphere of the sun.jpg" alt="atmosphere of the sun"><br>
+            <img src="../img/1sun/atmosphere of the sun.jpg" alt="atmosphere of the sun"><br>
             <p id="atmosphere"></p><br>
             <h4>สนามแม่เหล็กของดวงอาทิตย์ (Magnetic Fields of the Sun)</h4>
-            <img src="Magnetic Fields of the Sun.jpg" alt="Magnetic Fields of the Sun"><br>
+            <img src="../img/1sun/Magnetic Fields of the Sun.jpg" alt="Magnetic Fields of the Sun"><br>
             <p id="MagneticFields"></p><br>
             <h4>การลุกจ้าบนดวงอาทิตย์ (Solar Flare)</h4>
-            <img src="solsticeflare.jpg" alt="Solar Flare"><br>
+            <img src="../img/1sun/solsticeflare.jpg" alt="Solar Flare"><br>
             <p id="SolarFlare"></p><br>
             <h4>จุดบนดวงอาทิตย์ (Sunspot)</h4>
-            <img src="Sunspot.jpg" alt="Sunspot"><br>
+            <img src="../img/1sun/Sunspot.jpg" alt="Sunspot"><br>
             <p id="Sunspot"></p><br>
             <h4>การปลดปล่อยมวลของดวงอาทิตย์ (Coronal Mass Ejection : CME)</h4>
-            <img src="Coronal Mass Ejection.gif" alt="Coronal Mass Ejection"><br>
+            <img src="../img/1sun/Coronal Mass Ejection.gif" alt="Coronal Mass Ejection"><br>
             <p id="CME"></p><br>
             <h4>ดวงอาทิตย์ในช่วงความยาวคลื่นที่มองไม่เห็น</h4>
-            <img src="wave range of the Sun.gif" alt="Wave range"><br>
+            <img src="../img/1sun/wave range of the Sun.gif" alt="Wave range"><br>
             <p id="unseenwavelength"></p><br>
             <h4>วัฏจักรสุริยะ (Solar Cycle)</h4>
-            <img src="Solar Cycle.jpg" alt="Solar Cycle"><br>
+            <img src="../img/1sun/Solar Cycle.jpg" alt="Solar Cycle"><br>
             <p id="SolarCycle"></p>
         </div>
     </div>
     <div class="footer navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">
-            <img src="icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" href="../index.html">
+            <img src="../img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Solar System
         </a>
     </div>
