--- a/content/uranus.html
+++ b/content/uranus.html
@@ -15,8 +15,8 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark w-100 fixed-top">
-        <a class="navbar-brand" href="index.html">
-            <img src="icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" href="../index.html">
+            <img src="../img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Solar System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                         ระบบสุริยะ
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="index.html#origin">กำเนิดระบบสุริยะ</a>
+                        <a class="dropdown-item" href="../index.html#origin">กำเนิดระบบสุริยะ</a>
                         <a class="dropdown-item" href="sun.html">ดวงอาทิตย์</a>
                         <a class="dropdown-item" href="KuiperBelt.html">แถบไคเปอร์</a>
                         <a class="dropdown-item" href="scattereddisc.html">แถบจานกระจาย</a>
@@ -87,7 +87,7 @@
                             <li><a class="dropdown-item" href="https://images.nasa.gov/" target="_blank">NASA Image and
                                     Video
                                     Library</a></li>
-                            <li><a class="dropdown-item" href="about.html">ผู้จัดทำ</a></li>
+                            <li><a class="dropdown-item" href="../about/about.html">ผู้จัดทำ</a></li>
                         </ul>
                     </div>
                 </li>
@@ -104,7 +104,7 @@
 
         <div class="container">
             <div class="pic01">
-                <img src="8uranus.png" alt="Uranus" class="pic01">
+                <img src="../img/9uranus/8uranus.png" alt="Uranus" class="pic01">
             </div><br>
             <p id="content01"></p><br>
             <table class="table table-striped table-light" id="table" style="text-align: center;">
@@ -172,13 +172,13 @@
             <p id="ringcont"></p><br>
 
             <h4>บริวารของดาวยูเรนัส</h4>
-            <img src="moon of Uranus.jpg" alt="moon of Uranus" width="80%"><br>
+            <img src="../img/9uranus/moon of Uranus.jpg" alt="moon of Uranus" width="80%"><br>
             <p id="satellite"></p>
         </div>
 
         <div class="footer navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">
-                <img src="icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../img/main/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
                 Solar System
             </a>
         </div>
