--- a/content/KuiperBelt.html
+++ b/content/KuiperBelt.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="container">
-            <img src="../img/12kuiper/Kuiper Belt.jpg Belt.jpg" alt="Kuiper Belt" width="80%">
+            <img src="../img/12kuiper/Kuiper Belt.jpg" alt="Kuiper Belt" width="80%">
             <br>
             <p id="content01"></p>
         </div>
