--- a/content/OortCloud.html
+++ b/content/OortCloud.html
@@ -52,7 +52,7 @@
                         <a class="dropdown-item" href="earth.html">โลก</a>
                         <a class="dropdown-item" href="mars.html">อังคาร</a>
                         <a class="dropdown-item" href="jupiter.html">พฤหัสบดี</a>
-                        <a class="dropdown-item" href="Saturn.html">เสาร์</a>
+                        <a class="dropdown-item" href="saturn.html">เสาร์</a>
                         <a class="dropdown-item" href="uranus.html">ยูเรนัส</a>
                         <a class="dropdown-item" href="neptune.html">เนปจูน</a>
                         <div class="dropdown-divider"></div>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="container">
-            <img src="../img/14oortcloud/Oort Cloud-1.png Cloud-1.png" alt="Oort Cloud">
+            <img src="../img/14oortcloud/Oort Cloud-1.png" alt="Oort Cloud">
             <br>
             <p id="content01"></p>
         </div>
